public enum TipoDeCombustible {
  GNC, NAFTA, GASOIL, ELECTRICO
}
